# llm-decompiler

./: .gitignore  Cargo.toml  README.md  out.c  rebuild-playground.sh
checker/: Cargo.toml
checker/src/: action.rs  main.rs
docs/: heading.typ  main.typ  notes.typ  ref.bib  summary.typ
docs/chapters/: asm_to_ir.typ  definition.typ  evaluation.typ  future.typ  intro.typ  ir_passes.typ  ir_to_c.typ  layer.typ  prev.typ  prevent_halucination.typ  works.typ
docs/front/: abstract.tex  acknowledge.tex  dictionary.tex  info.tex
docs/front/template/: signatures.tex
docs/seminar/: example.txt  maktoob.typ  notes.typ  ref.bib  repro.bib  repro.typ  repro_good.typ  slide.typ
docs/seminar/template/Seminar Template/Latex/: .MyTemplate.ptd  .dictionary.ptd  .endnotes.ptd  .ref.ptd  .seminar.ptd  MyTemplate.sty  seminar.aux  seminar.bbl  seminar.blg  seminar.ent  seminar.out
docs/seminar/template/Seminar Template/Word/: AI Seminar Report Template 92.doc
docs/seminar/template/__MACOSX/Seminar Template/: ._Word
docs/seminar/template/__MACOSX/Seminar Template/Latex/: ._seminar.blg
examples/1/: converted.rs
exe_bench_manager/: .gitignore  main.py  pyproject.toml
my_cfg/: Cargo.toml
my_cfg/src/: lib.rs  loopified.rs
try14/: Cargo.toml
try14/src/: cfg.rs  main.rs  optimizations.rs
z3-lab/: Cargo.toml
z3-lab/src/: main.rs
z3-of-cfg/: Cargo.toml
z3-of-cfg/src/: lib.rs
