[package]
name = "checker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ast-utils = { version = "0.1.0", path = "../../azhdaha/ast-utils" }
repr = { version = "0.1.0", path = "../../azhdaha/repr" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
